--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
   		<scope>provided</scope>
   		<optional>true</optional>
   	</dependency>
+  	<dependency>
+  	    <groupId>org.projectlombok</groupId>
+  	    <artifactId>lombok</artifactId>
+  	    <version>1.14.8</version>
+  	    <scope>provided</scope>
+  	</dependency>
   </dependencies>
   <build>
   	<plugins>
