Upgrade maven compiler plugin Add targetdirectory

--- a/pom.xml
+++ b/pom.xml
@@ -47,11 +47,12 @@
   	</dependency>
   </dependencies>
   <build>
+    <outputDirectory>target/classes</outputDirectory>
   	<plugins>
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-compiler-plugin</artifactId>
-  			<version>2.3.2</version>
+  			<version>3.2</version>
   			<configuration>
   				<source>1.7</source>
   				<target>1.7</target>
