--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,8 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>techcable.minecraft</groupId>
-  <artifactId>npclib</artifactId>
+  <artifactId>npclib-parent</artifactId>
+  <name>NPC Lib</name>
   <version>1.0.0-SNAPSHOT</version>
   
   <repositories>
@@ -27,27 +28,21 @@
   		<scope>provided</scope>
   	</dependency>
   	<dependency>
-  		<groupId>org.bukkit</groupId>
-  		<artifactId>craftbukkit</artifactId>
-  		<version>1.7.10-R0.1-SNAPSHOT</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>net.citizensnpcs</groupId>
-  		<artifactId>citizensapi</artifactId>
-  		<version>2.0.13-SNAPSHOT</version>
-  		<scope>provided</scope>
-  		<optional>true</optional>
-  	</dependency>
-  	<dependency>
   	    <groupId>org.projectlombok</groupId>
   	    <artifactId>lombok</artifactId>
   	    <version>1.14.8</version>
   	    <scope>provided</scope>
   	</dependency>
   </dependencies>
+  
+  <modules>
+    <module>nms</module>
+    <module>api</module>
+    <module>citizens</module>
+    <module>nms-v1_7_R4</module>
+  </modules>
+
   <build>
-    <outputDirectory>target/classes</outputDirectory>
   	<plugins>
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
