--- a/nms-v1_8_R1/pom.xml
+++ b/nms-v1_8_R1/pom.xml
@@ -1,15 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
+
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>techcable.minecraft</groupId>
     <artifactId>npclib-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-  
-  <artifactId>npclib-nms</artifactId>
+
+  <artifactId>npclib-nms-v1_8_R1</artifactId>
+
   <dependencies>
     <dependency>
       <groupId>techcable.minecraft</groupId>
@@ -18,18 +19,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>techcable.minecraft</groupId>
-      <artifactId>npclib-nms-v1_7_R4</artifactId>
-      <version>${parent.version}</version>
-      <scope>compiled</scope>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>techcable.minecraft</groupId>
-      <artifactId>npclib-nms-v1_8_R1</artifactId>
-      <version>${parent.version}</version>
-      <scope>compiled</scope>
-      <optional>true</optional>
+      <groupId>org.bukkit</groupId>
+      <artifactId>craftbukkit</artifactId>
+      <version>1.8-R0.1-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
+  
 </project>
