--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <module>base</module>
     <module>citizens</module>
     <module>nms-v1_7_R4</module>
+    <module>nms-v1_8_R1</module>
   </modules>
 
   <build>
