--- a/nms-v1_8_R1/pom.xml
+++ b/nms-v1_8_R1/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>techcable.minecraft</groupId>
     <artifactId>npclib-parent</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>npclib-nms-v1_8_R1</artifactId>
