--- a/nms/pom.xml
+++ b/nms/pom.xml
@@ -18,6 +18,13 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+        <groupId>techcable.minecraft</groupId>
+        <artifactId>nms-v1_7_R4</artifactId>
+        <version>${parent.version}</version>
+        <scope>compile</scope>
+        <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>techcable.minecraft</groupId>
       <artifactId>npclib-nms-v1_7_R4</artifactId>
       <version>${parent.version}</version>
