--- a/nms-v1_7_R3/pom.xml
+++ b/nms-v1_7_R3/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0.2-SNAPSHOT</version>
   </parent>
 
-  <artifactId>nms-v1_7_R3</artifactId>
+  <artifactId>npclib-nms-v1_7_R3</artifactId>
 
   <dependencies>
     <dependency>
