--- a/citizens/pom.xml
+++ b/citizens/pom.xml
@@ -3,7 +3,8 @@
   <parent>
     <groupId>techcable.minecraft</groupId>
     <artifactId>npclib-parent</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>npclib-citizens</artifactId>
   
