--- a/nms-v1_8_R1/pom.xml
+++ b/nms-v1_8_R1/pom.xml
@@ -6,7 +6,8 @@
   <parent>
     <groupId>techcable.minecraft</groupId>
     <artifactId>npclib-parent</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>npclib-nms-v1_8_R1</artifactId>
