--- a/citizens/pom.xml
+++ b/citizens/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>techcable.minecraft</groupId>
-    <artifactId>npclib-parent</artifactId>
+    <groupId>net.techcable.npclib</groupId>
+    <artifactId>parent</artifactId>
     <version>1.1.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <artifactId>npclib-citizens</artifactId>
+  <artifactId>citizens</artifactId>
   
   <dependencies>
   	<dependency>
-  		<groupId>techcable.minecraft</groupId>
-  		<artifactId>npclib-api</artifactId>
+  		<groupId>net.techcable.npclib</groupId>
+  		<artifactId>api</artifactId>
   		<version>${parent.version}</version>
   		<scope>provided</scope>
   	</dependency>
