--- a/nms-v1_8_R1/pom.xml
+++ b/nms-v1_8_R1/pom.xml
@@ -4,18 +4,18 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>techcable.minecraft</groupId>
-    <artifactId>npclib-parent</artifactId>
+    <groupId>net.techcable.npclib</groupId>
+    <artifactId>parent</artifactId>
     <version>1.1.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>npclib-nms-v1_8_R1</artifactId>
+  <artifactId>nms-v1_8_R1</artifactId>
 
   <dependencies>
     <dependency>
-      <groupId>techcable.minecraft</groupId>
-      <artifactId>npclib-api</artifactId>
+      <groupId>net.techcable.npclib</groupId>
+      <artifactId>api</artifactId>
       <version>${parent.version}</version>
       <scope>provided</scope>
     </dependency>
