--- a/nms/pom.xml
+++ b/nms/pom.xml
@@ -4,35 +4,35 @@
   <modelVersion>4.0.0</modelVersion>
   
   <parent>
-    <groupId>techcable.minecraft</groupId>
-    <artifactId>npclib-parent</artifactId>
+    <groupId>net.techcable.npclib</groupId>
+    <artifactId>parent</artifactId>
     <version>1.1.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   
-  <artifactId>npclib-nms</artifactId>
+  <artifactId>nms</artifactId>
   <dependencies>
     <dependency>
-      <groupId>techcable.minecraft</groupId>
-      <artifactId>npclib-api</artifactId>
+      <groupId>net.techcable.npclib</groupId>
+      <artifactId>api</artifactId>
       <version>${parent.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-        <groupId>techcable.minecraft</groupId>
-        <artifactId>npclib-nms-v1_7_R3</artifactId>
+        <groupId>net.techcable.npclib</groupId>
+        <artifactId>nms-v1_7_R3</artifactId>
         <version>${parent.version}</version>
         <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>techcable.minecraft</groupId>
-      <artifactId>npclib-nms-v1_7_R4</artifactId>
+      <groupId>net.techcable.npclib</groupId>
+      <artifactId>nms-v1_7_R4</artifactId>
       <version>${parent.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>techcable.minecraft</groupId>
-      <artifactId>npclib-nms-v1_8_R1</artifactId>
+      <groupId>net.techcable.npclib</groupId>
+      <artifactId>nms-v1_8_R1</artifactId>
       <version>${parent.version}</version>
       <scope>compile</scope>
     </dependency>
