--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>techcable.minecraft</groupId>
-  <artifactId>npclib-parent</artifactId>
+  <groupId>net.techcable.npclib</groupId>
+  <artifactId>parent</artifactId>
   <name>NPC Lib</name>
   <version>1.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
