--- a/base/pom.xml
+++ b/base/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>net.techcable.npclib</groupId>
     <artifactId>parent</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>net.techcable</groupId>
@@ -27,4 +27,7 @@
   		<version>${parent.version}</version>
   	</dependency>
   </dependencies>
+  <build>
+    <finalName>NPCLib</finalName>
+  </build>
 </project>
