--- a/citizens/pom.xml
+++ b/citizens/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>net.techcable.npclib</groupId>
     <artifactId>parent</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>citizens</artifactId>
