--- a/nms-v1_7_R4/pom.xml
+++ b/nms-v1_7_R4/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>net.techcable.npclib</groupId>
     <artifactId>parent</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
