--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>net.techcable.npclib</groupId>
   <artifactId>parent</artifactId>
   <name>NPC Lib</name>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <packaging>pom</packaging>
   
   <repositories>
@@ -53,6 +53,19 @@
   				<target>1.7</target>
   			</configuration>
   		</plugin>
+                <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-shade-plugin</artifactId>
+			<version>2.3</version>
+			<executions>
+				<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>shade</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
   	</plugins>
   </build>
 
