--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>net.techcable.npclib</groupId>
   <artifactId>parent</artifactId>
   <name>NPC Lib</name>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <packaging>pom</packaging>
   
   <repositories>
