--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,13 @@
   </dependencies>
   
   <modules>
-    <module>nms</module>
-    <module>api</module>
-    <module>base</module>
-    <module>citizens</module>
     <module>nms-v1_7_R3</module>
     <module>nms-v1_7_R4</module>
     <module>nms-v1_8_R1</module>
+    <module>nms-v1_8_R2</module>
+    <module>nms</module>
+    <module>citizens</module>
+    <module>base</module>
   </modules>
 
   <build>
