--- a/nms/pom.xml
+++ b/nms/pom.xml
@@ -36,5 +36,11 @@
       <version>${parent.version}</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>net.techcable.npclib</groupId>
+      <artifactId>nms-v1_8_R2</artifactId>
+      <version>${parent.version}</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
