Add api to module listing

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
   </dependencies>
   
   <modules>
+    <module>api</module>
     <module>nms-v1_7_R3</module>
     <module>nms-v1_7_R4</module>
     <module>nms-v1_8_R1</module>
