--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <module>nms-v1_7_R4</module>
     <module>nms-v1_8_R1</module>
     <module>nms-v1_8_R2</module>
+    <module>nms-v1_8_R3</module>
     <module>nms</module>
     <module>citizens</module>
     <module>base</module>
