Try and avoid rate limits on skins by requesting again if failed
Should Fix TechzoneMC/CombatTagLegacy#18

--- a/nms-v1_7_R4/pom.xml
+++ b/nms-v1_7_R4/pom.xml
@@ -13,6 +13,13 @@
   <artifactId>nms-v1_7_R4</artifactId>
 
   <dependencies>
+    <!-- thanks to DarkSeraphim for dependency ordering fix of Bukkit.getOnlinePlayers() -->
+    <dependency>
+      <groupId>org.bukkit</groupId>
+      <artifactId>bukkit</artifactId>
+      <version>1.7.10-R0.1-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>net.techcable.npclib</groupId>
       <artifactId>api</artifactId>
