NPCLib 2.0 Beta NMS Implementation

--- a/pom.xml
+++ b/pom.xml
@@ -1,85 +1,86 @@
 <project>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>net.techcable.npclib</groupId>
-  <artifactId>parent</artifactId>
-  <name>NPC Lib</name>
-  <version>1.1.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  
-  <repositories>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>net.techcable.npclib</groupId>
+    <artifactId>parent</artifactId>
+    <name>NPC Lib</name>
+    <version>2.0.0-beta1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <repositories>
         <repository>
-                <id>techcable-repo</id>
-                <url>http://repo.techcable.net/content/groups/public/</url>
+            <id>techcable-repo</id>
+            <url>http://repo.techcable.net/content/groups/public/</url>
         </repository>
-  	<repository>
-  		<id>citizens-repo</id>
-  		<url>http://repo.citizensnpcs.co/</url>
-  	</repository>
-  </repositories>
-  
-  <dependencies>
-  	<dependency>
-  		<groupId>org.bukkit</groupId>
-  		<artifactId>bukkit</artifactId>
-  		<version>1.7.9-R0.2</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	<dependency>
-  	    <groupId>org.projectlombok</groupId>
-  	    <artifactId>lombok</artifactId>
-  	    <version>1.14.8</version>
-  	    <scope>provided</scope>
-  	</dependency>
-  </dependencies>
-  
-  <modules>
-    <module>api</module>
-    <module>nms-v1_7_R3</module>
-    <module>nms-v1_7_R4</module>
-    <module>nms-v1_8_R1</module>
-    <module>nms-v1_8_R2</module>
-    <module>nms</module>
-    <module>citizens</module>
-    <module>base</module>
-  </modules>
+        <repository>
+            <id>citizens-repo</id>
+            <url>http://repo.citizensnpcs.co/</url>
+        </repository>
+    </repositories>
 
-  <build>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-compiler-plugin</artifactId>
-  			<version>3.2</version>
-  			<configuration>
-  				<source>1.7</source>
-  				<target>1.7</target>
-  			</configuration>
-  		</plugin>
-                <plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-shade-plugin</artifactId>
-			<version>2.3</version>
-			<executions>
-				<execution>
-					<phase>package</phase>
-					<goals>
-						<goal>shade</goal>
-					</goals>
-				</execution>
-			</executions>
-		</plugin>
-  	</plugins>
-  </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>1.7.9-R0.2</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.14.8</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
-  <distributionManagement>
-    <repository>
-      <id>techcable-repo</id>
-      <name>Releases</name>
-      <url>http://repo.techcable.net/content/repositories/releases/</url>
-    </repository>
-    <snapshotRepository>
-      <id>techcable-repo</id>
-      <name>Snapshots</name>
-      <url>http://repo.techcable.net/content/repositories/snapshots/</url>
-    </snapshotRepository>
-  </distributionManagement>
+    <modules>
+        <module>api</module>
+        <module>nms-v1_7_R3</module>
+        <module>nms-v1_7_R4</module>
+        <module>nms-v1_8_R1</module>
+        <module>nms-v1_8_R2</module>
+        <module>nms-v1_8_R3</module>
+        <module>nms</module>
+        <module>citizens</module>
+        <module>base</module>
+    </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <distributionManagement>
+        <repository>
+            <id>techcable-repo</id>
+            <name>Releases</name>
+            <url>http://repo.techcable.net/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>techcable-repo</id>
+            <name>Snapshots</name>
+            <url>http://repo.techcable.net/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
