--- a/citizens/pom.xml
+++ b/citizens/pom.xml
@@ -1,25 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>net.techcable.npclib</groupId>
-    <artifactId>parent</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <artifactId>citizens</artifactId>
-  
-  <dependencies>
-  	<dependency>
-  		<groupId>net.techcable.npclib</groupId>
-  		<artifactId>api</artifactId>
-  		<version>${parent.version}</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>net.citizensnpcs</groupId>
-  		<artifactId>citizens</artifactId>
-  		<version>2.0.13-SNAPSHOT</version>
-  		<scope>provided</scope>
-  	</dependency>
-  </dependencies>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>net.techcable.npclib</groupId>
+        <artifactId>parent</artifactId>
+        <version>2.0.0-beta1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    <artifactId>citizens</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>net.techcable.npclib</groupId>
+            <artifactId>api</artifactId>
+            <version>${parent.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.citizensnpcs</groupId>
+            <artifactId>citizens</artifactId>
+            <version>2.0.13-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
