--- a/nms-v1_7_R3/pom.xml
+++ b/nms-v1_7_R3/pom.xml
@@ -1,30 +1,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>net.techcable.npclib</groupId>
-    <artifactId>parent</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
+    <parent>
+        <groupId>net.techcable.npclib</groupId>
+        <artifactId>parent</artifactId>
+        <version>2.0.0-beta1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
-  <artifactId>nms-v1_7_R3</artifactId>
+    <artifactId>nms-v1_7_R3</artifactId>
 
-  <dependencies>
-    <dependency>
-      <groupId>net.techcable.npclib</groupId>
-      <artifactId>api</artifactId>
-      <version>${parent.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.bukkit</groupId>
-      <artifactId>craftbukkit</artifactId>
-      <version>1.7.9-R0.2</version>
-      <scope>provided</scope>
-    </dependency>
-  </dependencies>
-  
+    <dependencies>
+        <dependency>
+            <groupId>net.techcable.npclib</groupId>
+            <artifactId>api</artifactId>
+            <version>${parent.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>craftbukkit</artifactId>
+            <version>1.7.9-R0.2</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
 </project>
