--- a/nms/pom.xml
+++ b/nms/pom.xml
@@ -1,46 +1,53 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
-  <modelVersion>4.0.0</modelVersion>
-  
-  <parent>
-    <groupId>net.techcable.npclib</groupId>
-    <artifactId>parent</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  
-  <artifactId>nms</artifactId>
-  <dependencies>
-    <dependency>
-      <groupId>net.techcable.npclib</groupId>
-      <artifactId>api</artifactId>
-      <version>${parent.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
         <groupId>net.techcable.npclib</groupId>
-        <artifactId>nms-v1_7_R3</artifactId>
-        <version>${parent.version}</version>
-        <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>net.techcable.npclib</groupId>
-      <artifactId>nms-v1_7_R4</artifactId>
-      <version>${parent.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>net.techcable.npclib</groupId>
-      <artifactId>nms-v1_8_R1</artifactId>
-      <version>${parent.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>net.techcable.npclib</groupId>
-      <artifactId>nms-v1_8_R2</artifactId>
-      <version>${parent.version}</version>
-      <scope>compile</scope>
-    </dependency>
-  </dependencies>
+        <artifactId>parent</artifactId>
+        <version>2.0.0-beta1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
+    <artifactId>nms</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>net.techcable.npclib</groupId>
+            <artifactId>api</artifactId>
+            <version>${parent.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- NMS Versions -->
+        <dependency>
+            <groupId>net.techcable.npclib</groupId>
+            <artifactId>nms-v1_7_R3</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.techcable.npclib</groupId>
+            <artifactId>nms-v1_7_R4</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.techcable.npclib</groupId>
+            <artifactId>nms-v1_8_R1</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.techcable.npclib</groupId>
+            <artifactId>nms-v1_8_R2</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.techcable.npclib</groupId>
+            <artifactId>nms-v1_8_R3</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
