--- a/api/pom.xml
+++ b/api/pom.xml
@@ -7,4 +7,18 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>api</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.mycila</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>2.8</version>
+                <configuration>
+                    <excludes>
+                        <exclude>src/main/java/net/techcable/npclib/utils/astar</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
