Add tests for NPCLibLoader

--- a/base/pom.xml
+++ b/base/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>nms</artifactId>
             <version>${parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>NPCLib</finalName>
