--- a/citizens/pom.xml
+++ b/citizens/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>net.techcable.npclib</groupId>
         <artifactId>parent</artifactId>
-        <version>2.0.0-beta1-SNAPSHOT</version>
+        <version>2.0.0-beta1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>citizens</artifactId>
