--- a/nms-v1_8_R3/pom.xml
+++ b/nms-v1_8_R3/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
@@ -6,7 +7,7 @@
     <parent>
         <groupId>net.techcable.npclib</groupId>
         <artifactId>parent</artifactId>
-        <version>2.0.0-beta1-SNAPSHOT</version>
+        <version>2.0.0-beta1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
