--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>net.techcable.npclib</groupId>
     <artifactId>parent</artifactId>
     <name>NPC Lib</name>
-    <version>2.0.0-beta1</version>
+    <version>2.0.0-beta2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <repositories>
